Clean up references and bibliography

--- a/final-submission/appendices/language-evaluation.tex
+++ b/final-submission/appendices/language-evaluation.tex
@@ -75,7 +75,7 @@ We grouped the criterions for our comparison into three groups: Client (See Tabl
 		\\
 		
 		Use existing libraries (e.g. for reading disk health status)
-		& Yes, using FFI \cite{rust-book-concurrency}
+		& Yes, using FFI \cite{rust-book-ffi}
 		& Yes, using NIF \cite{erlang-org-nif}
 		& Yes, using cgo \cite{golang-org-cgo}
 		\\
