Continue with corrections by Mrs Massey and myself

--- a/final-submission/appendices/architecture.tex
+++ b/final-submission/appendices/architecture.tex
@@ -419,7 +419,7 @@ This scenario is described as it is implemented in the study project. It might b
 
 \subsubsection{Network Availability Problems}\label{sec:scenario-network-errors}
 \paragraph{Behaviour in case a node can reach only some nodes directly}
-The still available \glspl{node} should try to satisfy redundancy needs as good as possible.
+The still available \glspl{node} should try to fulfill redundancy needs as good as possible.
 If a \gls{node} cannot reach other \glspl{node}, it notifies the \gls{management} with the next \emph{post nodes metadata}
 
 \paragraph{Behaviour in case the network gets partitioned}
