Implement changes suggested by rzimmerm

--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -112,9 +112,9 @@
 %   - Eigenständiger Text
 %   - Für SA: Informierende Abstracts, also Thema, Problem, Ziele, Vorgehen, Ergebnisse
 % - Siehe auch: Chapter 2.3 in https://wiki.hsr.ch/FarhadMehta/files/Writing_Scientific_Papers.pdf
-Today, most individuals and small companies have a limited choice of how and where they back up their data.
+Today, most individuals and small enterprises have a limited choice of how and where they back up their data.
 
-One possibility is via local storage media, for instance using external hard disk drives. This requires manual effort and may lead to a single point of failure, since location redundancy requires extra effort. A second possibility is to use publicly provided cloud services. These may lead to issues of privacy and a high dependency on third-party providers. 
+One possibility is via local storage media, for instance using external hard disk drives. This requires considerable administration and may lead to a single point of failure, since location redundancy requires extra effort. A second possibility is to use cloud backup storage. These may lead to issues of privacy and a high dependency on third-party providers. 
 
 There are no easy-to-use distributed backup systems with private data storage on the market today.
 
@@ -143,9 +143,9 @@ In this study project we propose a redundant distributed backup system to addres
 % - Ausblick (optional)
 
 \section*{Motivation} % Auch Ausgangslage
-Today, most individuals and small to medium enterprises make backups on cloud environments or local storage media as e.g. hard disk drives or network attached storage systems (NAS).
+Today, most individuals and small to medium enterprises make backups on cloud backup storage or local storage media as e.g. hard disk drives or network attached storage systems (NAS).
 
-These solutions require either high personal efforts to maintain local storage media or a high level of trust in a third party storage provider.
+These solutions require either considerable administrative effort to maintain local storage media or a high level of trust in a third party storage provider.
 
 Currently, there are no backup systems available on the market which are both easy-to-use and provide the user with a high level of data security and privacy.
 
