Uniform glossary and table labeling

--- a/final-submission/appendices/architecture.tex
+++ b/final-submission/appendices/architecture.tex
@@ -472,7 +472,7 @@ A \gls{message} is separated into a \gls{message-header} and \gls{message-payloa
 
     \hline
 \end{tabu}
-\caption{Structure of a \gls{header-field} element}
+\caption{Structure of a \gls{header-field} Element}
 \label{tab:message-field-header}
 \end{table}
 
@@ -488,7 +488,7 @@ A \gls{message} is separated into a \gls{message-header} and \gls{message-payloa
         & A string representation of the message type, as described in subsections \fullref{sec:messages}. \\
         \hline
     \end{tabu}
-    \caption{Core set of \glspl{header-field} sent with every request}
+    \caption{Core set of \glspl{header-field} sent with every Request}
     \label{tab:core-header-fields}
 \end{table}
 
@@ -517,7 +517,7 @@ A \gls{message} is separated into a \gls{message-header} and \gls{message-payloa
         Response
         & \fullref{sec:return-target-nodes} (compulsory) \\
     \end{tabu}
-    \caption{\texttt{get target nodes} message specification}
+    \caption{\texttt{get target nodes} Message Specification}
 \end{table}
 
 \subsubsection{return target nodes}\label{sec:return-target-nodes}
