--- a/final-submission/appendices/language-evaluation.tex
+++ b/final-submission/appendices/language-evaluation.tex
@@ -91,7 +91,7 @@ We grouped the criteria for our comparison into three groups: Client (See Table 
 
 \begin{sidewaystable}
 	\centering
-	\caption{Language and Ecosystem Comparison for the Eco System}
+	\caption{Ecosystem Comparison}
 	\label{language-comparison-eco-system}
 	\begin{tabu}{X|X X X}
 		\hline
