Relace "as less as" with "as seldom as"

--- a/final-submission/appendices/architecture.tex
+++ b/final-submission/appendices/architecture.tex
@@ -27,7 +27,7 @@ To simplify the implementation for the study project, the \gls{user} must instru
 
 
 \subsubsection{Administrator}
-An \gls{administrator} wants to interact with the \gls{system} as less as possible. He/She wants to be sure that the \gls{system} runs smoothly. If something goes wrong, he/she wants to be able to fix it within a few minutes.
+An \gls{administrator} wants to interact with the \gls{system} as seldom as possible. He/She wants to be sure that the \gls{system} runs smoothly. If something goes wrong, he/she wants to be able to fix it within a few minutes.
 
 \paragraph{Responsibilities}
 \begin{itemize}
