--- a/final-submission/appendices/requirements.tex
+++ b/final-submission/appendices/requirements.tex
@@ -12,7 +12,7 @@ A typical \emph{User} does not want to interact with the system at any time.
 All he/she wants is to be sure that all his/her data is safely backed
 up.
 
-An \emph{Administrator} wants to interact with the system as less as possible.
+An \emph{Administrator} wants to interact with the system as seldom as possible.
 He/She wants to be sure that the system runs smoothly. If something goes
 wrong, he/she wants to be able to fix it within a few minutes.
 
