--- a/final-submission/appendices/requirements.tex
+++ b/final-submission/appendices/requirements.tex
@@ -21,8 +21,7 @@ determine measurable requirements. We, therefore, started to highlight the inten
 and general attitude of the actors towards the system. Afterwards, we extrapolated the most
 important requirements.
 
-Not all intentions must be met within the study project but the might %TODO: Reference to scope section as soon as ready.
-impact architectural decisions. All intentions relevant for the study project are therefore listed here \relevantreq{emphasised}.
+Not all intentions must be met within the study project but the might impact architectural decisions. All intentions relevant for the study project are therefore listed here \relevantreq{emphasised}.
 
 
 \subsection{Intentions of a User}
