--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -191,13 +191,6 @@ Furthermore, we would like to thank Andrea~Jurt~Massey for her feedback regardin
 \tableofcontents % Prints the main table of contents
 
 %----------------------------------------------------------------------------------------
-%	DEDICATION
-%----------------------------------------------------------------------------------------
-
-%TODO
-%\dedicatory{For/Dedicated to/To my\ldots}
-
-%----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
 %----------------------------------------------------------------------------------------
 
@@ -210,7 +203,7 @@ Furthermore, we would like to thank Andrea~Jurt~Massey for her feedback regardin
 \include{chapters/3_discussion_and_conclusion}
 
 \subsubsection*{} %This is needed, so that not the next page is referenced.
-\label{lastpage} %TODO: This label should be positioned below above the last paragraph
+\label{lastpage}
 
 \cleardoublepage
 %----------------------------------------------------------------------------------------
