--- a/project-plan/project-plan.tex
+++ b/project-plan/project-plan.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_GB
-\input{../latex_template}
+\input{latex_template}
 
 \usepackage{tabu}
 \usepackage{diagbox}
@@ -329,7 +329,7 @@ A minimal performance analysis will be carried out at the end of the project.
 
 
 
-\label{lastpage} %TODO: This label should be positioned below above the last paragraph
+\label{lastpage}
 
 %\cleardoublepage
 %----------------------------------------------------------------------------------------
@@ -350,16 +350,5 @@ A minimal performance analysis will be carried out at the end of the project.
 \listoffigures % Prints the list of figures
 
 \listoftables % Prints the list of tables
-
-%----------------------------------------------------------------------------------------
-%	ABBREVIATIONS
-%----------------------------------------------------------------------------------------
-
-\begin{abbreviations}{ll} % Include a list of abbreviations (a table of two columns)
-
-%\textbf{LAH} & \textbf{L}ist \textbf{A}bbreviations \textbf{H}ere\\
-%\textbf{WSF} & \textbf{W}hat (it) \textbf{S}tands \textbf{F}or\\
-
-\end{abbreviations}
 
 \end{document}
