Final improvements by rzimmerm

--- a/final-submission/appendices/architecture.tex
+++ b/final-submission/appendices/architecture.tex
@@ -1,6 +1,6 @@
 % !TeX spellcheck = en_GB
 
-\section{Architecture}\label{sec:specification}
+\section{Architectural Concept Paper}\label{sec:specification}
 
 \subsection{Overview}
 Figure \ref{fig:architecture-overview} presents an overview over the Redbackup \gls{system}. All actors, components and interactions are described in detail in the following sections.
