Fix language bugs

--- a/final-submission/appendices/architecture.tex
+++ b/final-submission/appendices/architecture.tex
@@ -347,7 +347,7 @@ This scenario is described as it is implemented in the study project. It might b
 \end{enumerate}
 
 \begin{itemize}
-    \item If the \gls{node} returns, it carries on as if nothing happened.
+    \item If the \gls{node} returns, it carries on as if nothing had happened.
     \item If the \gls{node} does not return, the \gls{administrator} marks the \gls{node} as \emph{left}, which is propagated to all \glspl{node} via the \emph{post nodes metadata} message.
         \begin{itemize}
             \item \glspl{chunk-content}, which were not previously replicated from the \gls{node} are lost.
