--- a/final-submission/final-submission.tex
+++ b/final-submission/final-submission.tex
@@ -114,7 +114,7 @@
 % - Siehe auch: Chapter 2.3 in https://wiki.hsr.ch/FarhadMehta/files/Writing_Scientific_Papers.pdf
 Today, most individuals and small enterprises have a limited choice of how and where they backup their data.
 
-One possibility is via local storage media, for instance using external hard disk drives. This requires considerable administration and may lead to a single point of failure, since location redundancy requires extra effort. A second possibility is to use cloud backup storage. These may lead to issues of privacy and a high dependency on third-party providers. 
+One possibility is via local storage media, for instance using external hard disk drives. This requires considerable administration and may lead to a single point of failure, since location redundancy requires extra effort. A second possibility is to use cloud backup storage. This may lead to issues of privacy and a high dependency on third-party providers. 
 
 There are no easy-to-use distributed backup systems with private data storage on the market today.
 
